Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/Chirp-Regular.80fda27a.woff2") format("woff2");
	font-weight: 400;//regular
}

@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/Chirp-Medium.f8e2739a.woff2") format("woff");
	font-weight: 500//medium;
}

@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/Chirp-Bold.ebb56aba.woff2") format("woff2");
	font-weight: 700;//bold
}

@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/Chirp-Heavy.f44ae4ea.woff2") format("woff2");
	font-weight: 900//heavy;
}
@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/Chirp-Light.3a18e64a.woff2") format("woff2");
	font-weight: 300;//light
}


:root {
	--header-height: 107px;
	--tweet-box-height: 188px;
	--main-border-style: 1px solid rgb(239, 243, 244);
}

::placeholder {
	color: #536471;
}

section,
div,
p,
img,
ul,
ol,
li {
	margin: 0;
	padding: 0;
}

.alignment-boxes {
	flex: 1 1 46.66%;
	height: 100%;
	margin: 0;
	padding: 0;

	@media screen and (width>=500px) {
		display: none;
	}
}

.hidden500 {
	display: none !important;
	@media only screen and (width>=500px) {
		display: flex !important;
	}
}

.hidden688 {
	display: none !important;
	@media only screen and (width>=688px) {
		display: flex !important;
	}
}

.hidden705 {
	display: none !important;
	@media only screen and (width>=705px) {
		display: flex !important;
	}
}

.hidden-More {
	display: none !important;
}

.wrappers {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}
.wrappers--flex {
	display: flex;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}
.wrappers--flex-column {
	display: flex;
	flex-direction: column;
}

.App {
	display: flex;
	flex-direction: column;
	height: 100vh;
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	font-family: chirp;
	font-weight: light;

	@media only screen and (width>=500px) {
		flex-direction: row;
		overflow-x: scroll;
	}
}

.nav-container {
	z-index: 3;
	position: sticky;
	order: 2;
	display: flex;
	bottom: 0px;
	// /* margin: 0; */ commented out to prevent fixed position being pushed to top
	margin: 0;
	padding: 0;
	border-top: var(--main-border-style);
	min-height: 53.5px;
	max-height: 53.5px; //both heights required + purposefully diff from twitter actual height in order to avoid creating wrapper inside nav
	width: 100%;
	box-sizing: border-box;
	background-color: white;

	@media only screen and (width>=500px) {
		flex-direction: column;
		//top: -0.5px;
		flex: 1 0 auto;
		height: 100vh;
		max-height: 100vh;
		min-height: 100vh;
		width: 68px;
		border-top: 0;
		margin: 0;
		padding: 0 4px;
		order: unset;
		overflow-y: auto;
		justify-content: space-between;
		align-items: center;
		top: 0;
		overflow-x: hidden;
	}
	@media only screen and (width>=600px) {
		padding: 0;
		width: 88px;
		border: none;
	}

	@media only screen and (width>=688px) {
		width: 88px;
		flex: 1 1 auto;
		align-items: end;
		padding: 0 8px;
	}

	@media only screen and (width>=988px) {
		width: 68px;
		flex: 1 0 auto;
		align-items: end;
		//justify-content: end;
		overflow-y: hidden;
		padding: 0;
	}

	@media screen and (width>=1008px) {
		width: 88px;
		flex: 1 0 auto;
		overflow-y: hidden;
	}
	@media screen and (width>=1025px) {
		width: 96.5px;
		align-items: end;
	}
	@media screen and (width>=width>=1078px) {
		width: 88px;
		align-items: end;
		//background-color: red;
	}
	@media screen and (width>=1265px) {
		width: 275px;
		align-items: end;
		padding: 0;
		//box-sizing: border-box;
	}
}
/* ... */

